finishing the project

--- a/code/01.EDA_&_Cleaning_Nan_Imputation.ipynb
+++ b/code/01.EDA_&_Cleaning_Nan_Imputation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "4              1.0          -120.0     0.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "freq             78240  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,9 +422,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'sort'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [28], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m lbl\u001b[39m.\u001b[39mfit(\u001b[39mlist\u001b[39m(data_frame[c]\u001b[39m.\u001b[39mvalues)) \n\u001b[1;32m      5\u001b[0m data_frame[c] \u001b[39m=\u001b[39m lbl\u001b[39m.\u001b[39mtransform(\u001b[39mlist\u001b[39m(data_frame[c]\u001b[39m.\u001b[39mvalues))\n\u001b[0;32m----> 6\u001b[0m \u001b[39mprint\u001b[39m(c\u001b[39m.\u001b[39msort())\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'sort'"
+     ]
+    }
+   ],
    "source": [
     "# process columns, apply LabelEncoder to categorical features\n",
     "for c in cat_vars.columns:\n",
@@ -444,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +656,7 @@
        "4     0.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,19 +674,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yj/nrb4536x26s8lfxkz_6kzf100000gn/T/ipykernel_76647/1434253583.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/yj/nrb4536x26s8lfxkz_6kzf100000gn/T/ipykernel_80613/2617670888.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data_frame_credito['TARGET'] = data_frame_credito['TARGET'].astype(int)\n"
+      "  data_frame_credito['TARGET'] = data_frame_credito['TARGET'].astype(int)\n",
+      "/var/folders/yj/nrb4536x26s8lfxkz_6kzf100000gn/T/ipykernel_80613/2617670888.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_frame_credito['CNT_FAM_MEMBERS'] = data_frame_credito['CNT_FAM_MEMBERS'].astype(int)\n"
      ]
     }
    ],
@@ -683,14 +701,13 @@
     "data_frame_credito = data_frame[data_frame['TARGET'].notna()]\n",
     "data_frame_credito['TARGET'] = data_frame_credito['TARGET'].astype(int)\n",
     "\n",
-    "# cnt_fam_members to int\n",
-    "data_frame_credito = data_frame[data_frame['CNT_FAM_MEMBERS'].notna()]\n",
+    "# # cnt_fam_members to int\n",
     "data_frame_credito['CNT_FAM_MEMBERS'] = data_frame_credito['CNT_FAM_MEMBERS'].astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +771,7 @@
        "      <td>0</td>\n",
        "      <td>18</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -775,7 +792,7 @@
        "      <td>0</td>\n",
        "      <td>18</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -796,7 +813,7 @@
        "      <td>0</td>\n",
        "      <td>16</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -817,7 +834,7 @@
        "      <td>1</td>\n",
        "      <td>14</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -838,7 +855,7 @@
        "      <td>1</td>\n",
        "      <td>14</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -874,14 +891,14 @@
        "4                0           1           1               14                1   \n",
        "\n",
        "   TARGET  \n",
-       "0     0.0  \n",
-       "1     0.0  \n",
-       "2     0.0  \n",
-       "3     0.0  \n",
-       "4     0.0  "
+       "0       0  \n",
+       "1       0  \n",
+       "2       0  \n",
+       "3       0  \n",
+       "4       0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,20 +908,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imputing data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/hectorcozar/Documents/GitHub/caixabank/venv/lib/python3.9/site-packages/missingpy/missforest.py:528: UserWarning: No missing value located; returning original dataset.\n",
+      "  warnings.warn(\"No missing value located; returning original \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make an instance and perform the imputation\n",
+    "imputer = MissForest(max_iter = 10, max_features=1.0, criterion='squared_error')\n",
+    "data_frame_imputed = pd.DataFrame(imputer.fit_transform(data_frame_credito))\n",
+    "\n",
+    "# Renaming columns after imputation\n",
+    "data_frame_imputed.columns = data_frame_credito.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stored 'data_frame_credito' (DataFrame)\n"
+      "Stored 'data_frame_imputed' (DataFrame)\n"
      ]
     }
    ],
    "source": [
-    "%store data_frame_credito"
+    "%store data_frame_imputed"
    ]
   }
  ],
